<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_white"
    tools:context="com.tencent.liteav.demo.MainActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:layout_marginTop="28dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_back">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:singleLine="true"
            android:text="@string/app_name"
            android:textColor="@color/color_black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/btn_link"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="right|center_vertical"
            android:background="@color/transparent"
            android:padding="20dp"
            android:src="@drawable/ic_question_link" />
    </android.support.v7.widget.Toolbar>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/cl_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/bg_edit_room_info"
        android:orientation="vertical"
        android:padding="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/tv_room_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_room_id"
            android:textColor="@color/color_main_text"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/et_room_id"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:background="@null"
            android:hint="@string/hint_input_room_id"
            android:imeOptions="actionNext"
            android:inputType="number"
            android:maxEms="10"
            android:maxLines="1"
            android:singleLine="true"
            android:textColor="@color/color_main_text"
            android:textColorHint="@color/text_color_hint"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@+id/tv_room_id"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tv_room_id"
            app:layout_constraintTop_toTopOf="@+id/tv_room_id" />


    </android.support.constraint.ConstraintLayout>

    <TextView
        android:id="@+id/tv_enter"
        android:layout_width="148dp"
        android:layout_height="52dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/btn_border"
        android:enabled="false"
        android:gravity="center"

        android:text="@string/text_enter_room"
        android:textColor="@color/color_white"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cl_edit" />


    <RelativeLayout
        android:id="@+id/rl_create_room"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="100dp"
        android:background="@drawable/btn_border"
        android:padding="14dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <ImageView
            android:id="@+id/btn_create_room"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_add" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="8dp"
            android:layout_toRightOf="@id/btn_create_room"
            android:text="@string/create_room"
            android:textColor="@color/color_white"
            android:textSize="18sp"
            android:textStyle="bold" />

    </RelativeLayout>
</android.support.constraint.ConstraintLayout>
